Dia-1/spree-ecommerce/discounts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecommerce
    service: discounts
  name: discounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ecommerce
        service: discounts
    spec:
      containers:
      - image: salomaosan/discounts:v0.1-adm
        name: discounts
        ports:
        - containerPort: 5001
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ecommerce
    service: discounts
  name: discounts
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: ecommerce
    service: discounts
  sessionAffinity: None
  type: ClusterIP
